Fixed footer icons

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
   <!-- CUSTOM FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/3934c42899.js" crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
